--- a/main.css
+++ b/main.css
@@ -4,12 +4,13 @@
 }
 
 @font-face {
-    font-family: 'Bahnschrift Condensed';
-    src: local('Bahnschrift Condensed') format('truetype');
+    font-family: Bahnschrift;
+    src: url('./bahnschrift.ttf') format('truetype');
 }
 
 * {
-    font-family: 'Bahnschrift Condensed';
+    font-family: Bahnschrift;
+    font-stretch: condensed;
 }
 
 @media screen and (min-width: 1160px) {
@@ -1246,11 +1247,13 @@
     #txtfire {
         display: flex;
         flex-direction: column;
-        margin-left: -5%;
+        margin-left: 1%;
     }
     #firerow {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+        padding-top: 30px;
     }
     #blockwithhands {
         width: 100%;
@@ -1261,8 +1264,8 @@
         justify-content: center;
     }
     #blockwimg {
-        width: 350px;
-        height: 350px;
+        width: 300px;
+        height: 300px;
     }
     #txtinhands {
         background-color: #ffcc00;
