--- a/about.css
+++ b/about.css
@@ -553,7 +553,7 @@
     }
     #maininfoch2 {
         font-size: 40px;
-        color: #5b95db;
+        color: #fff;
         margin-left: 20px;
         margin-top: -30px;
         font-weight: 500;
@@ -938,7 +938,7 @@
     }
     #maininfoch2 {
         font-size: 20px;
-        color: #5b95db;
+        color: #fff;
         margin-top: -10px;
         font-weight: 500;
         letter-spacing: -2px;
